[project]
name = "ml-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.3",
    "pandas>=3.0.1",
]

[dependency-groups]
ci = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.5",
]
dev = [
    "ipykernel>=7.2.0",
]
